fix: date correction for insurance meeting

--- a/content/news/events_20240930.md
+++ b/content/news/events_20240930.md
@@ -1,5 +1,5 @@
 +++
-title = "Insurance Committee Meeting #2 on Oct. 9"
+title = "Insurance Committee Meeting #2 on Oct. 3"
 date = 2024-09-30
 
 [taxonomies]
@@ -10,6 +10,6 @@ tags = ["Meeting", "Insurance", "Negotiation", "Benefits"]
 author = "Erik Rose"
 +++
 
-Donna Anderson and Erik Rose will be representing GPEA members in a continuing series of discussions regarding insurance benefits for the upcoming year.  The meeting will take place at City Hall on Oct. 9 at 3:30 pm.
+Donna Anderson and Erik Rose will be representing GPEA members in a continuing series of discussions regarding insurance benefits for the upcoming year.  The meeting will take place at City Hall on Thursday, Oct. 3 at 3:30 pm.
 
 We appreciate those of you who have reached out to us regarding Providence as our choice of provider.  If you would still like your voice to be heard in the upcoming discussion, please contact one of our officers before the meeting.
